--- a/src/views/partial/task/taskTable.hbs
+++ b/src/views/partial/task/taskTable.hbs
@@ -38,7 +38,7 @@
       {{else}}
       <div class="h-100 d-flex align-items-center justify-content-center">
               <div class="text-center text-white">
-        <h1>No Task</h1>
+        <h1>Sin tareas</h1>
         <img src="/icons/SVG-icon.svg" class="w-25">
       </div>
       </div>
