--- a/src/views/partial/task/taskForm.hbs
+++ b/src/views/partial/task/taskForm.hbs
@@ -1,27 +1,27 @@
 <div class="card card-body p-4 rounded-0 bg-dark text-white">
 
-  <h3>Add a Task</h3>
+  <h3>Agregue una tarea</h3>
 
   <form action="/tasks/add" method="POST">
 
-    <div><label for="title">Write a title:</label>
+    <div><label for="title">Agregue un titulo:</label>
       <input
         type="text"
         name="title"
-        placeholder="title"
+        placeholder="titulo"
         id="title"
         class="form-control rounded-0 bg-dark text-white"
       /></div>
     <div>
-      <label for="description">description:</label>
+      <label for="description">Agregue una descripcion:</label>
 
       <textarea
         name="description"
-        placeholder="description"
+        placeholder="descripcion"
         id="description"
         class="form-control rounded-0 bg-dark text-white" 
       ></textarea>
     </div>
-    <button class="btn-btn-primary btm-sm mt-2">Add</button>
+    <button class="btn-btn-primary btm-sm mt-2">Agregar</button>
   </form>
 </div>
