--- a/src/views/partial/task/taskTable.hbs
+++ b/src/views/partial/task/taskTable.hbs
@@ -3,9 +3,9 @@
   <thead>
     <tr>
       <th>N.</th>
-      <th>title</th>
-      <th>description</th>
-      <th>Operations</th>
+      <th>titulo</th>
+      <th>descripción</th>
+      <th>Operacion</th>
     </tr>
   </thead>
 
@@ -20,13 +20,13 @@
 
           {{#if done}}
 
-            <a href="/tasks/{{_id}}/toggleDone" class="btn btn-dark">Undone</a>
+            <a href="/tasks/{{_id}}/toggleDone" class="btn btn-dark">Deshacer</a>
           {{else}}
-            <a href="/tasks/{{_id}}/toggleDone" class="btn btn-success">Done</a>
+            <a href="/tasks/{{_id}}/toggleDone" class="btn btn-success">Hecho</a>
           {{/if}}
 
-          <a href="/tasks/{{_id}}/delete" class="btn btn-danger">Delete</a>
-          <a href="/tasks/{{_id}}/edit" class="btn btn-info">Update</a>
+          <a href="/tasks/{{_id}}/delete" class="btn btn-danger">Eliminar</a>
+          <a href="/tasks/{{_id}}/edit" class="btn btn-info">Actualizar</a>
         </td>
       </tr>
 
